--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rivet-plugin-pdf2md",
   "packageManager": "yarn@3.5.0",
-  "version": "0.0.8",
+  "version": "0.0.1",
   "type": "module",
   "main": "dist/bundle.js",
   "files": [
@@ -30,6 +30,6 @@
     "node": "20.6.1"
   },
   "rivet": {
-    "skipInstall": true
+    "skipInstall": false
   }
 }
