--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "@ironclad/rivet-core": "latest",
     "@opendocsg/pdf2md": "^0.1.28",
-    "turndown": "^7.1.2"
+    "node-html-markdown": "^1.3.0"
   },
   "devDependencies": {
     "esbuild": "^0.19.2",
