--- a/package.json
+++ b/package.json
@@ -13,18 +13,20 @@
     "watch:tsc": "tsc -b -w --preserveWatchOutput",
     "watch:esbuild": "tsx bundle.ts --watch",
     "watch:esbuild:sync": "tsx bundle.ts --watch --sync",
-    "postinstall": "npm install canvas @opendocsg/pdf2md"
+    "postinstall": "npm install canvas @opendocsg/pdf2md node-html-markdown"
   },
   "dependencies": {
     "@ironclad/rivet-core": "latest",
     "@opendocsg/pdf2md": "^0.1.28",
+    "canvas": "^2.11.2",
+    "node-html-markdown": "^1.3.0",
     "turndown": "^7.1.2"
   },
   "devDependencies": {
     "esbuild": "^0.19.2",
     "npm-run-all": "^4.1.5",
     "recursive-copy": "^2.0.14",
-    "tsx": "^3.12.10",
+    "tsx": "^4.7.1",
     "typescript": "^5.2.2"
   },
   "volta": {
