--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "@ironclad/rivet-core": "latest",
     "@opendocsg/pdf2md": "^0.1.28",
     "canvas": "^2.11.2",
-    "node-html-markdown": "^1.3.0",
-    "turndown": "^7.1.2"
+    "node-html-markdown": "^1.3.0"
   },
   "devDependencies": {
     "esbuild": "^0.19.2",
