--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rivet-plugin-pdf2md",
   "packageManager": "yarn@3.5.0",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "type": "module",
   "main": "dist/bundle.js",
   "files": [
@@ -12,8 +12,7 @@
     "dev": "run-p watch:tsc watch:esbuild:sync",
     "watch:tsc": "tsc -b -w --preserveWatchOutput",
     "watch:esbuild": "tsx bundle.ts --watch",
-    "watch:esbuild:sync": "tsx bundle.ts --watch --sync",
-    "postinstall": "npm install canvas @opendocsg/pdf2md node-html-markdown"
+    "watch:esbuild:sync": "tsx bundle.ts --watch --sync"
   },
   "dependencies": {
     "@ironclad/rivet-core": "latest",
@@ -32,6 +31,6 @@
     "node": "20.6.1"
   },
   "rivet": {
-    "skipInstall": true
+    "skipInstall": false
   }
 }
